add gorizontal card

--- a/index.html
+++ b/index.html
@@ -9,8 +9,76 @@
 
   </head>
   <body>
+    <!-- Card -->
+    <div class="container">
+      <div class="row">
+
+        <div class="col-md-6 mb-2">
+          <div class="card">
+            <!-- <div class="card-header">Card #1 bosh qismi</div> -->
+            <img src="https://via.placeholder.com/100x60" alt="Rasm" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Card sarlavhasi</h5>
+              <h6 class="card-subtitle mb-2 text-muted">lorem ipsum</h6>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis a quos odio sit.</p>
+              <a href="#" class="btn btn-outline-primary">Card tugmasi</a>
+            </div>
+            <div class="card-footer text-muted">
+              Card footer qismi
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="card">
+            <!-- <div class="card-header">Card #2 bosh qismi</div> -->
+            <div class="card-body">
+              <h5 class="card-title">Card sarlavhasi</h5>
+              <h6 class="card-subtitle mb-2 text-muted">lorem ipsum</h6>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis a quos odio sit.</p>
+              <a href="#" class="btn btn-outline-primary">Card tugmasi</a>
+            </div>
+            <div class="card-footer text-muted">
+              Card footer qismi
+            </div>
+            <img src="https://via.placeholder.com/100x60" alt="Rasm" class="card-img-bottom">
+          </div>
+        </div>
+        <!-- card rasmini orqa fonga joylash -->
+        <div class="col-md-6 mb-3">
+          <div class="card bg-dark text-white">
+            <img src="https://via.placeholder.com/400" alt="Rasm" class="card-img" style="width: 21rem;">
+            <div class="card-img-overlay">
+              <h5 class="card-title">Card sarlavhasi</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+      <hr>
+    </div>
+    <!-- Gorizontal card yaratish -->
 
     <div class="container">
+      <div class="card mb-3 border-primary" style="max-width: 640px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="https://via.placeholder.com/100" alt="Rasm" class="card-img-top">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Vertical card sarlavhasi</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id asperiores hic repellat, neque laboriosam nulla earum tempore numquam quod inventore.</p>
+              <p class="card-title"><small class="text-mute">Lorem ipsum dolor sit.</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- <div class="container">
       <h1>Hello, world!</h1>
       <div class="accordion" id="accordionExample">
 
@@ -54,7 +122,7 @@
         </div>
 
       </div>
-    </div>
+    </div> -->
 
 
     <!-- JS link -->
